--- a/RememberMe/RememberMe/Info.plist
+++ b/RememberMe/RememberMe/Info.plist
@@ -53,6 +53,10 @@
 	</array>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>Allow to access your photo library</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Allow to access your camera</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Allow app to track your location</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
